// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components SchemaView discriminator should correctly render SchemaView 1`] = `
<ObjectSchema
  discriminator={
    Object {
      "fieldName": "type",
      "parentSchema": SchemaModel {
        "_$ref": "#/components/schemas/Pet",
        "activeOneOf": 0,
        "constraints": Array [],
        "default": undefined,
        "deprecated": false,
        "description": "",
        "discriminatorProp": "type",
        "displayType": "object",
        "enum": Array [],
        "example": undefined,
        "format": undefined,
        "isCircular": undefined,
        "isPrimitive": false,
        "nullable": false,
        "oneOf": Array [
          SchemaModel {
            "_$ref": "#/components/schemas/Dog",
            "activeOneOf": 0,
            "constraints": Array [],
            "default": undefined,
            "deprecated": false,
            "description": "",
            "displayType": "object",
            "enum": Array [],
            "example": undefined,
            "fields": Array [
              FieldModel {
                "deprecated": false,
                "description": "",
                "example": undefined,
                "expanded": false,
                "in": undefined,
                "name": "packSize",
                "required": false,
                "schema": SchemaModel {
                  "_$ref": "#/components/schemas/Dog/properties/packSize/schema",
                  "activeOneOf": 0,
                  "constraints": Array [],
                  "default": undefined,
                  "deprecated": false,
                  "description": "",
                  "displayType": "number",
                  "enum": Array [],
                  "example": undefined,
                  "format": undefined,
                  "isCircular": undefined,
                  "isPrimitive": true,
                  "nullable": false,
                  "options": RedocNormalizedOptions {
                    "expandResponses": Object {},
                    "hideHostname": false,
                    "nativeScrollbars": false,
                    "noAutoAuth": false,
                    "pathInMiddlePanel": false,
                    "requiredPropsFirst": false,
                    "scrollYOffset": [Function],
                    "theme": Object {
                      "baseFont": Object {
                        "family": "Roboto, sans-serif",
                        "lineHeight": "1.5",
                        "optimizeSpeed": true,
                        "size": "14px",
                        "smoothing": "antialiased",
                        "weight": "300",
                      },
                      "code": Object {
                        "fontFamily": "Courirer, monospace",
                        "fontSize": "13px",
                      },
                      "colors": Object {
                        "error": "#e53935",
                        "http": Object {
                          "basic": "#999",
                          "delete": "#e27a7a",
                          "get": "#6bbd5b",
                          "link": "#31bbb6",
                          "options": "#d3ca12",
                          "patch": "#e09d43",
                          "post": "#248fb2",
                          "put": "#9b708b",
                        },
                        "info": "skyblue",
                        "main": "#32329f",
                        "redirect": "orange",
                        "success": "#00aa13",
                        "text": "#263238",
                        "warning": "#f1c400",
                      },
                      "headingsFont": Object {
                        "family": "Montserrat, sans-serif",
                      },
                      "links": Object {
                        "color": undefined,
                        "hover": undefined,
                        "visited": undefined,
                      },
                      "logo": Object {
                        "maxHeight": "120px",
                      },
                      "menu": Object {
                        "backgroundColor": "#fafafa",
                        "width": "260px",
                      },
                      "rightPanel": Object {
                        "backgroundColor": "#263238",
                        "width": 40,
                      },
                      "schemaView": Object {
                        "defaultDetailsWidth": "75%",
                        "linesColor": "#7f99cf",
                      },
                      "spacingUnit": 20,
                    },
                    "untrustedSpec": false,
                  },
                  "pattern": undefined,
                  "rawSchema": Object {
                    "default": undefined,
                    "type": "number",
                  },
                  "readOnly": false,
                  "schema": Object {
                    "default": undefined,
                    "type": "number",
                  },
                  "title": "",
                  "type": "number",
                  "typePrefix": "",
                  "writeOnly": false,
                },
              },
              FieldModel {
                "deprecated": false,
                "description": "",
                "example": undefined,
                "expanded": false,
                "in": undefined,
                "name": "type",
                "required": true,
                "schema": SchemaModel {
                  "_$ref": "#/components/schemas/Dog/properties/type/schema",
                  "activeOneOf": 0,
                  "constraints": Array [],
                  "default": undefined,
                  "deprecated": false,
                  "description": "",
                  "displayType": "string",
                  "enum": Array [],
                  "example": undefined,
                  "format": undefined,
                  "isCircular": undefined,
                  "isPrimitive": true,
                  "nullable": false,
                  "options": RedocNormalizedOptions {
                    "expandResponses": Object {},
                    "hideHostname": false,
                    "nativeScrollbars": false,
                    "noAutoAuth": false,
                    "pathInMiddlePanel": false,
                    "requiredPropsFirst": false,
                    "scrollYOffset": [Function],
                    "theme": Object {
                      "baseFont": Object {
                        "family": "Roboto, sans-serif",
                        "lineHeight": "1.5",
                        "optimizeSpeed": true,
                        "size": "14px",
                        "smoothing": "antialiased",
                        "weight": "300",
                      },
                      "code": Object {
                        "fontFamily": "Courirer, monospace",
                        "fontSize": "13px",
                      },
                      "colors": Object {
                        "error": "#e53935",
                        "http": Object {
                          "basic": "#999",
                          "delete": "#e27a7a",
                          "get": "#6bbd5b",
                          "link": "#31bbb6",
                          "options": "#d3ca12",
                          "patch": "#e09d43",
                          "post": "#248fb2",
                          "put": "#9b708b",
                        },
                        "info": "skyblue",
                        "main": "#32329f",
                        "redirect": "orange",
                        "success": "#00aa13",
                        "text": "#263238",
                        "warning": "#f1c400",
                      },
                      "headingsFont": Object {
                        "family": "Montserrat, sans-serif",
                      },
                      "links": Object {
                        "color": undefined,
                        "hover": undefined,
                        "visited": undefined,
                      },
                      "logo": Object {
                        "maxHeight": "120px",
                      },
                      "menu": Object {
                        "backgroundColor": "#fafafa",
                        "width": "260px",
                      },
                      "rightPanel": Object {
                        "backgroundColor": "#263238",
                        "width": 40,
                      },
                      "schemaView": Object {
                        "defaultDetailsWidth": "75%",
                        "linesColor": "#7f99cf",
                      },
                      "spacingUnit": 20,
                    },
                    "untrustedSpec": false,
                  },
                  "pattern": undefined,
                  "rawSchema": Object {
                    "default": undefined,
                    "type": "string",
                  },
                  "readOnly": false,
                  "schema": Object {
                    "default": undefined,
                    "type": "string",
                  },
                  "title": "",
                  "type": "string",
                  "typePrefix": "",
                  "writeOnly": false,
                },
              },
            ],
            "format": undefined,
            "isCircular": undefined,
            "isPrimitive": false,
            "nullable": false,
            "options": RedocNormalizedOptions {
              "expandResponses": Object {},
              "hideHostname": false,
              "nativeScrollbars": false,
              "noAutoAuth": false,
              "pathInMiddlePanel": false,
              "requiredPropsFirst": false,
              "scrollYOffset": [Function],
              "theme": Object {
                "baseFont": Object {
                  "family": "Roboto, sans-serif",
                  "lineHeight": "1.5",
                  "optimizeSpeed": true,
                  "size": "14px",
                  "smoothing": "antialiased",
                  "weight": "300",
                },
                "code": Object {
                  "fontFamily": "Courirer, monospace",
                  "fontSize": "13px",
                },
                "colors": Object {
                  "error": "#e53935",
                  "http": Object {
                    "basic": "#999",
                    "delete": "#e27a7a",
                    "get": "#6bbd5b",
                    "link": "#31bbb6",
                    "options": "#d3ca12",
                    "patch": "#e09d43",
                    "post": "#248fb2",
                    "put": "#9b708b",
                  },
                  "info": "skyblue",
                  "main": "#32329f",
                  "redirect": "orange",
                  "success": "#00aa13",
                  "text": "#263238",
                  "warning": "#f1c400",
                },
                "headingsFont": Object {
                  "family": "Montserrat, sans-serif",
                },
                "links": Object {
                  "color": undefined,
                  "hover": undefined,
                  "visited": undefined,
                },
                "logo": Object {
                  "maxHeight": "120px",
                },
                "menu": Object {
                  "backgroundColor": "#fafafa",
                  "width": "260px",
                },
                "rightPanel": Object {
                  "backgroundColor": "#263238",
                  "width": 40,
                },
                "schemaView": Object {
                  "defaultDetailsWidth": "75%",
                  "linesColor": "#7f99cf",
                },
                "spacingUnit": 20,
              },
              "untrustedSpec": false,
            },
            "pattern": undefined,
            "rawSchema": Object {
              "allOf": Array [
                Object {
                  "$ref": "#/components/schemas/Pet",
                },
              ],
              "properties": Object {
                "packSize": Object {
                  "type": "number",
                },
              },
              "type": "object",
            },
            "readOnly": false,
            "schema": Object {
              "allOf": undefined,
              "discriminator": Object {
                "propertyName": "type",
              },
              "parentRefs": Array [
                "#/components/schemas/Pet",
              ],
              "properties": Object {
                "packSize": Object {
                  "type": "number",
                },
                "type": Object {
                  "type": "string",
                },
              },
              "required": Array [
                "type",
              ],
              "title": "Pet",
              "type": "object",
            },
            "title": "Dog",
            "type": "object",
            "typePrefix": "",
            "writeOnly": false,
          },
          SchemaModel {
            "_$ref": "#/components/schemas/Cat",
            "activeOneOf": 0,
            "constraints": Array [],
            "default": undefined,
            "deprecated": false,
            "description": "",
            "displayType": "object",
            "enum": Array [],
            "example": undefined,
            "fields": Array [
              FieldModel {
                "deprecated": false,
                "description": "",
                "example": undefined,
                "expanded": false,
                "in": undefined,
                "name": "type",
                "required": true,
                "schema": SchemaModel {
                  "_$ref": "#/components/schemas/Cat/properties/type/schema",
                  "activeOneOf": 0,
                  "constraints": Array [],
                  "default": undefined,
                  "deprecated": false,
                  "description": "",
                  "displayType": "string",
                  "enum": Array [],
                  "example": undefined,
                  "format": undefined,
                  "isCircular": undefined,
                  "isPrimitive": true,
                  "nullable": false,
                  "options": RedocNormalizedOptions {
                    "expandResponses": Object {},
                    "hideHostname": false,
                    "nativeScrollbars": false,
                    "noAutoAuth": false,
                    "pathInMiddlePanel": false,
                    "requiredPropsFirst": false,
                    "scrollYOffset": [Function],
                    "theme": Object {
                      "baseFont": Object {
                        "family": "Roboto, sans-serif",
                        "lineHeight": "1.5",
                        "optimizeSpeed": true,
                        "size": "14px",
                        "smoothing": "antialiased",
                        "weight": "300",
                      },
                      "code": Object {
                        "fontFamily": "Courirer, monospace",
                        "fontSize": "13px",
                      },
                      "colors": Object {
                        "error": "#e53935",
                        "http": Object {
                          "basic": "#999",
                          "delete": "#e27a7a",
                          "get": "#6bbd5b",
                          "link": "#31bbb6",
                          "options": "#d3ca12",
                          "patch": "#e09d43",
                          "post": "#248fb2",
                          "put": "#9b708b",
                        },
                        "info": "skyblue",
                        "main": "#32329f",
                        "redirect": "orange",
                        "success": "#00aa13",
                        "text": "#263238",
                        "warning": "#f1c400",
                      },
                      "headingsFont": Object {
                        "family": "Montserrat, sans-serif",
                      },
                      "links": Object {
                        "color": undefined,
                        "hover": undefined,
                        "visited": undefined,
                      },
                      "logo": Object {
                        "maxHeight": "120px",
                      },
                      "menu": Object {
                        "backgroundColor": "#fafafa",
                        "width": "260px",
                      },
                      "rightPanel": Object {
                        "backgroundColor": "#263238",
                        "width": 40,
                      },
                      "schemaView": Object {
                        "defaultDetailsWidth": "75%",
                        "linesColor": "#7f99cf",
                      },
                      "spacingUnit": 20,
                    },
                    "untrustedSpec": false,
                  },
                  "pattern": undefined,
                  "rawSchema": Object {
                    "default": undefined,
                    "type": "string",
                  },
                  "readOnly": false,
                  "schema": Object {
                    "default": undefined,
                    "type": "string",
                  },
                  "title": "",
                  "type": "string",
                  "typePrefix": "",
                  "writeOnly": false,
                },
              },
              FieldModel {
                "deprecated": false,
                "description": "",
                "example": undefined,
                "expanded": false,
                "in": undefined,
                "name": "packSize",
                "required": false,
                "schema": SchemaModel {
                  "_$ref": "#/components/schemas/Cat/properties/packSize/schema",
                  "activeOneOf": 0,
                  "constraints": Array [],
                  "default": undefined,
                  "deprecated": false,
                  "description": "",
                  "displayType": "number",
                  "enum": Array [],
                  "example": undefined,
                  "format": undefined,
                  "isCircular": undefined,
                  "isPrimitive": true,
                  "nullable": false,
                  "options": RedocNormalizedOptions {
                    "expandResponses": Object {},
                    "hideHostname": false,
                    "nativeScrollbars": false,
                    "noAutoAuth": false,
                    "pathInMiddlePanel": false,
                    "requiredPropsFirst": false,
                    "scrollYOffset": [Function],
                    "theme": Object {
                      "baseFont": Object {
                        "family": "Roboto, sans-serif",
                        "lineHeight": "1.5",
                        "optimizeSpeed": true,
                        "size": "14px",
                        "smoothing": "antialiased",
                        "weight": "300",
                      },
                      "code": Object {
                        "fontFamily": "Courirer, monospace",
                        "fontSize": "13px",
                      },
                      "colors": Object {
                        "error": "#e53935",
                        "http": Object {
                          "basic": "#999",
                          "delete": "#e27a7a",
                          "get": "#6bbd5b",
                          "link": "#31bbb6",
                          "options": "#d3ca12",
                          "patch": "#e09d43",
                          "post": "#248fb2",
                          "put": "#9b708b",
                        },
                        "info": "skyblue",
                        "main": "#32329f",
                        "redirect": "orange",
                        "success": "#00aa13",
                        "text": "#263238",
                        "warning": "#f1c400",
                      },
                      "headingsFont": Object {
                        "family": "Montserrat, sans-serif",
                      },
                      "links": Object {
                        "color": undefined,
                        "hover": undefined,
                        "visited": undefined,
                      },
                      "logo": Object {
                        "maxHeight": "120px",
                      },
                      "menu": Object {
                        "backgroundColor": "#fafafa",
                        "width": "260px",
                      },
                      "rightPanel": Object {
                        "backgroundColor": "#263238",
                        "width": 40,
                      },
                      "schemaView": Object {
                        "defaultDetailsWidth": "75%",
                        "linesColor": "#7f99cf",
                      },
                      "spacingUnit": 20,
                    },
                    "untrustedSpec": false,
                  },
                  "pattern": undefined,
                  "rawSchema": Object {
                    "default": undefined,
                    "type": "number",
                  },
                  "readOnly": false,
                  "schema": Object {
                    "default": undefined,
                    "type": "number",
                  },
                  "title": "",
                  "type": "number",
                  "typePrefix": "",
                  "writeOnly": false,
                },
              },
            ],
            "format": undefined,
            "isCircular": undefined,
            "isPrimitive": false,
            "nullable": false,
            "options": RedocNormalizedOptions {
              "expandResponses": Object {},
              "hideHostname": false,
              "nativeScrollbars": false,
              "noAutoAuth": false,
              "pathInMiddlePanel": false,
              "requiredPropsFirst": false,
              "scrollYOffset": [Function],
              "theme": Object {
                "baseFont": Object {
                  "family": "Roboto, sans-serif",
                  "lineHeight": "1.5",
                  "optimizeSpeed": true,
                  "size": "14px",
                  "smoothing": "antialiased",
                  "weight": "300",
                },
                "code": Object {
                  "fontFamily": "Courirer, monospace",
                  "fontSize": "13px",
                },
                "colors": Object {
                  "error": "#e53935",
                  "http": Object {
                    "basic": "#999",
                    "delete": "#e27a7a",
                    "get": "#6bbd5b",
                    "link": "#31bbb6",
                    "options": "#d3ca12",
                    "patch": "#e09d43",
                    "post": "#248fb2",
                    "put": "#9b708b",
                  },
                  "info": "skyblue",
                  "main": "#32329f",
                  "redirect": "orange",
                  "success": "#00aa13",
                  "text": "#263238",
                  "warning": "#f1c400",
                },
                "headingsFont": Object {
                  "family": "Montserrat, sans-serif",
                },
                "links": Object {
                  "color": undefined,
                  "hover": undefined,
                  "visited": undefined,
                },
                "logo": Object {
                  "maxHeight": "120px",
                },
                "menu": Object {
                  "backgroundColor": "#fafafa",
                  "width": "260px",
                },
                "rightPanel": Object {
                  "backgroundColor": "#263238",
                  "width": 40,
                },
                "schemaView": Object {
                  "defaultDetailsWidth": "75%",
                  "linesColor": "#7f99cf",
                },
                "spacingUnit": 20,
              },
              "untrustedSpec": false,
            },
            "pattern": undefined,
            "rawSchema": Object {
              "allOf": Array [
                Object {
                  "$ref": "#/components/schemas/Pet",
                },
                Object {
                  "properties": Object {
                    "packSize": Object {
                      "type": "number",
                    },
                  },
                },
              ],
              "type": "object",
            },
            "readOnly": false,
            "schema": Object {
              "allOf": undefined,
              "discriminator": Object {
                "propertyName": "type",
              },
              "parentRefs": Array [
                "#/components/schemas/Pet",
              ],
              "properties": Object {
                "packSize": Object {
                  "type": "number",
                },
                "type": Object {
                  "type": "string",
                },
              },
              "required": Array [
                "type",
              ],
              "title": "Pet",
              "type": "object",
            },
            "title": "Cat",
            "type": "object",
            "typePrefix": "",
            "writeOnly": false,
          },
        ],
        "options": RedocNormalizedOptions {
          "expandResponses": Object {},
          "hideHostname": false,
          "nativeScrollbars": false,
          "noAutoAuth": false,
          "pathInMiddlePanel": false,
          "requiredPropsFirst": false,
          "scrollYOffset": [Function],
          "theme": Object {
            "baseFont": Object {
              "family": "Roboto, sans-serif",
              "lineHeight": "1.5",
              "optimizeSpeed": true,
              "size": "14px",
              "smoothing": "antialiased",
              "weight": "300",
            },
            "code": Object {
              "fontFamily": "Courirer, monospace",
              "fontSize": "13px",
            },
            "colors": Object {
              "error": "#e53935",
              "http": Object {
                "basic": "#999",
                "delete": "#e27a7a",
                "get": "#6bbd5b",
                "link": "#31bbb6",
                "options": "#d3ca12",
                "patch": "#e09d43",
                "post": "#248fb2",
                "put": "#9b708b",
              },
              "info": "skyblue",
              "main": "#32329f",
              "redirect": "orange",
              "success": "#00aa13",
              "text": "#263238",
              "warning": "#f1c400",
            },
            "headingsFont": Object {
              "family": "Montserrat, sans-serif",
            },
            "links": Object {
              "color": undefined,
              "hover": undefined,
              "visited": undefined,
            },
            "logo": Object {
              "maxHeight": "120px",
            },
            "menu": Object {
              "backgroundColor": "#fafafa",
              "width": "260px",
            },
            "rightPanel": Object {
              "backgroundColor": "#263238",
              "width": 40,
            },
            "schemaView": Object {
              "defaultDetailsWidth": "75%",
              "linesColor": "#7f99cf",
            },
            "spacingUnit": 20,
          },
          "untrustedSpec": false,
        },
        "pattern": undefined,
        "rawSchema": Object {
          "discriminator": Object {
            "propertyName": "type",
          },
          "properties": Object {
            "type": Object {
              "type": "string",
            },
          },
          "required": Array [
            "type",
          ],
          "type": "object",
        },
        "readOnly": false,
        "schema": Object {
          "discriminator": Object {
            "propertyName": "type",
          },
          "properties": Object {
            "type": Object {
              "type": "string",
            },
          },
          "required": Array [
            "type",
          ],
          "type": "object",
        },
        "title": "Pet",
        "type": "object",
        "typePrefix": "",
        "writeOnly": false,
      },
    }
  }
  schema={
    SchemaModel {
      "_$ref": "#/components/schemas/Dog",
      "activeOneOf": 0,
      "constraints": Array [],
      "default": undefined,
      "deprecated": false,
      "description": "",
      "displayType": "object",
      "enum": Array [],
      "example": undefined,
      "fields": Array [
        FieldModel {
          "deprecated": false,
          "description": "",
          "example": undefined,
          "expanded": false,
          "in": undefined,
          "name": "packSize",
          "required": false,
          "schema": SchemaModel {
            "_$ref": "#/components/schemas/Dog/properties/packSize/schema",
            "activeOneOf": 0,
            "constraints": Array [],
            "default": undefined,
            "deprecated": false,
            "description": "",
            "displayType": "number",
            "enum": Array [],
            "example": undefined,
            "format": undefined,
            "isCircular": undefined,
            "isPrimitive": true,
            "nullable": false,
            "options": RedocNormalizedOptions {
              "expandResponses": Object {},
              "hideHostname": false,
              "nativeScrollbars": false,
              "noAutoAuth": false,
              "pathInMiddlePanel": false,
              "requiredPropsFirst": false,
              "scrollYOffset": [Function],
              "theme": Object {
                "baseFont": Object {
                  "family": "Roboto, sans-serif",
                  "lineHeight": "1.5",
                  "optimizeSpeed": true,
                  "size": "14px",
                  "smoothing": "antialiased",
                  "weight": "300",
                },
                "code": Object {
                  "fontFamily": "Courirer, monospace",
                  "fontSize": "13px",
                },
                "colors": Object {
                  "error": "#e53935",
                  "http": Object {
                    "basic": "#999",
                    "delete": "#e27a7a",
                    "get": "#6bbd5b",
                    "link": "#31bbb6",
                    "options": "#d3ca12",
                    "patch": "#e09d43",
                    "post": "#248fb2",
                    "put": "#9b708b",
                  },
                  "info": "skyblue",
                  "main": "#32329f",
                  "redirect": "orange",
                  "success": "#00aa13",
                  "text": "#263238",
                  "warning": "#f1c400",
                },
                "headingsFont": Object {
                  "family": "Montserrat, sans-serif",
                },
                "links": Object {
                  "color": undefined,
                  "hover": undefined,
                  "visited": undefined,
                },
                "logo": Object {
                  "maxHeight": "120px",
                },
                "menu": Object {
                  "backgroundColor": "#fafafa",
                  "width": "260px",
                },
                "rightPanel": Object {
                  "backgroundColor": "#263238",
                  "width": 40,
                },
                "schemaView": Object {
                  "defaultDetailsWidth": "75%",
                  "linesColor": "#7f99cf",
                },
                "spacingUnit": 20,
              },
              "untrustedSpec": false,
            },
            "pattern": undefined,
            "rawSchema": Object {
              "default": undefined,
              "type": "number",
            },
            "readOnly": false,
            "schema": Object {
              "default": undefined,
              "type": "number",
            },
            "title": "",
            "type": "number",
            "typePrefix": "",
            "writeOnly": false,
          },
        },
        FieldModel {
          "deprecated": false,
          "description": "",
          "example": undefined,
          "expanded": false,
          "in": undefined,
          "name": "type",
          "required": true,
          "schema": SchemaModel {
            "_$ref": "#/components/schemas/Dog/properties/type/schema",
            "activeOneOf": 0,
            "constraints": Array [],
            "default": undefined,
            "deprecated": false,
            "description": "",
            "displayType": "string",
            "enum": Array [],
            "example": undefined,
            "format": undefined,
            "isCircular": undefined,
            "isPrimitive": true,
            "nullable": false,
            "options": RedocNormalizedOptions {
              "expandResponses": Object {},
              "hideHostname": false,
              "nativeScrollbars": false,
              "noAutoAuth": false,
              "pathInMiddlePanel": false,
              "requiredPropsFirst": false,
              "scrollYOffset": [Function],
              "theme": Object {
                "baseFont": Object {
                  "family": "Roboto, sans-serif",
                  "lineHeight": "1.5",
                  "optimizeSpeed": true,
                  "size": "14px",
                  "smoothing": "antialiased",
                  "weight": "300",
                },
                "code": Object {
                  "fontFamily": "Courirer, monospace",
                  "fontSize": "13px",
                },
                "colors": Object {
                  "error": "#e53935",
                  "http": Object {
                    "basic": "#999",
                    "delete": "#e27a7a",
                    "get": "#6bbd5b",
                    "link": "#31bbb6",
                    "options": "#d3ca12",
                    "patch": "#e09d43",
                    "post": "#248fb2",
                    "put": "#9b708b",
                  },
                  "info": "skyblue",
                  "main": "#32329f",
                  "redirect": "orange",
                  "success": "#00aa13",
                  "text": "#263238",
                  "warning": "#f1c400",
                },
                "headingsFont": Object {
                  "family": "Montserrat, sans-serif",
                },
                "links": Object {
                  "color": undefined,
                  "hover": undefined,
                  "visited": undefined,
                },
                "logo": Object {
                  "maxHeight": "120px",
                },
                "menu": Object {
                  "backgroundColor": "#fafafa",
                  "width": "260px",
                },
                "rightPanel": Object {
                  "backgroundColor": "#263238",
                  "width": 40,
                },
                "schemaView": Object {
                  "defaultDetailsWidth": "75%",
                  "linesColor": "#7f99cf",
                },
                "spacingUnit": 20,
              },
              "untrustedSpec": false,
            },
            "pattern": undefined,
            "rawSchema": Object {
              "default": undefined,
              "type": "string",
            },
            "readOnly": false,
            "schema": Object {
              "default": undefined,
              "type": "string",
            },
            "title": "",
            "type": "string",
            "typePrefix": "",
            "writeOnly": false,
          },
        },
      ],
      "format": undefined,
      "isCircular": undefined,
      "isPrimitive": false,
      "nullable": false,
      "options": RedocNormalizedOptions {
        "expandResponses": Object {},
        "hideHostname": false,
        "nativeScrollbars": false,
        "noAutoAuth": false,
        "pathInMiddlePanel": false,
        "requiredPropsFirst": false,
        "scrollYOffset": [Function],
        "theme": Object {
          "baseFont": Object {
            "family": "Roboto, sans-serif",
            "lineHeight": "1.5",
            "optimizeSpeed": true,
            "size": "14px",
            "smoothing": "antialiased",
            "weight": "300",
          },
          "code": Object {
            "fontFamily": "Courirer, monospace",
            "fontSize": "13px",
          },
          "colors": Object {
            "error": "#e53935",
            "http": Object {
              "basic": "#999",
              "delete": "#e27a7a",
              "get": "#6bbd5b",
              "link": "#31bbb6",
              "options": "#d3ca12",
              "patch": "#e09d43",
              "post": "#248fb2",
              "put": "#9b708b",
            },
            "info": "skyblue",
            "main": "#32329f",
            "redirect": "orange",
            "success": "#00aa13",
            "text": "#263238",
            "warning": "#f1c400",
          },
          "headingsFont": Object {
            "family": "Montserrat, sans-serif",
          },
          "links": Object {
            "color": undefined,
            "hover": undefined,
            "visited": undefined,
          },
          "logo": Object {
            "maxHeight": "120px",
          },
          "menu": Object {
            "backgroundColor": "#fafafa",
            "width": "260px",
          },
          "rightPanel": Object {
            "backgroundColor": "#263238",
            "width": 40,
          },
          "schemaView": Object {
            "defaultDetailsWidth": "75%",
            "linesColor": "#7f99cf",
          },
          "spacingUnit": 20,
        },
        "untrustedSpec": false,
      },
      "pattern": undefined,
      "rawSchema": Object {
        "allOf": Array [
          Object {
            "$ref": "#/components/schemas/Pet",
          },
        ],
        "properties": Object {
          "packSize": Object {
            "type": "number",
          },
        },
        "type": "object",
      },
      "readOnly": false,
      "schema": Object {
        "allOf": undefined,
        "discriminator": Object {
          "propertyName": "type",
        },
        "parentRefs": Array [
          "#/components/schemas/Pet",
        ],
        "properties": Object {
          "packSize": Object {
            "type": "number",
          },
          "type": Object {
            "type": "string",
          },
        },
        "required": Array [
          "type",
        ],
        "title": "Pet",
        "type": "object",
      },
      "title": "Dog",
      "type": "object",
      "typePrefix": "",
      "writeOnly": false,
    }
  }
/>
`;

exports[`Components SchemaView discriminator should correctly render discriminator dropdown 1`] = `
<styled.table>
  <tbody>
    <Field
      field={
        FieldModel {
          "deprecated": false,
          "description": "",
          "example": undefined,
          "expanded": false,
          "in": undefined,
          "name": "packSize",
          "required": false,
          "schema": SchemaModel {
            "_$ref": "#/components/schemas/Dog/properties/packSize/schema",
            "activeOneOf": 0,
            "constraints": Array [],
            "default": undefined,
            "deprecated": false,
            "description": "",
            "displayType": "number",
            "enum": Array [],
            "example": undefined,
            "format": undefined,
            "isCircular": undefined,
            "isPrimitive": true,
            "nullable": false,
            "options": RedocNormalizedOptions {
              "expandResponses": Object {},
              "hideHostname": false,
              "nativeScrollbars": false,
              "noAutoAuth": false,
              "pathInMiddlePanel": false,
              "requiredPropsFirst": false,
              "scrollYOffset": [Function],
              "theme": Object {
                "baseFont": Object {
                  "family": "Roboto, sans-serif",
                  "lineHeight": "1.5",
                  "optimizeSpeed": true,
                  "size": "14px",
                  "smoothing": "antialiased",
                  "weight": "300",
                },
                "code": Object {
                  "fontFamily": "Courirer, monospace",
                  "fontSize": "13px",
                },
                "colors": Object {
                  "error": "#e53935",
                  "http": Object {
                    "basic": "#999",
                    "delete": "#e27a7a",
                    "get": "#6bbd5b",
                    "link": "#31bbb6",
                    "options": "#d3ca12",
                    "patch": "#e09d43",
                    "post": "#248fb2",
                    "put": "#9b708b",
                  },
                  "info": "skyblue",
                  "main": "#32329f",
                  "redirect": "orange",
                  "success": "#00aa13",
                  "text": "#263238",
                  "warning": "#f1c400",
                },
                "headingsFont": Object {
                  "family": "Montserrat, sans-serif",
                },
                "links": Object {
                  "color": undefined,
                  "hover": undefined,
                  "visited": undefined,
                },
                "logo": Object {
                  "maxHeight": "120px",
                },
                "menu": Object {
                  "backgroundColor": "#fafafa",
                  "width": "260px",
                },
                "rightPanel": Object {
                  "backgroundColor": "#263238",
                  "width": 40,
                },
                "schemaView": Object {
                  "defaultDetailsWidth": "75%",
                  "linesColor": "#7f99cf",
                },
                "spacingUnit": 20,
              },
              "untrustedSpec": false,
            },
            "pattern": undefined,
            "rawSchema": Object {
              "default": undefined,
              "type": "number",
            },
            "readOnly": false,
            "schema": Object {
              "default": undefined,
              "type": "number",
            },
            "title": "",
            "type": "number",
            "typePrefix": "",
            "writeOnly": false,
          },
        }
      }
      isLast={false}
      key="packSize"
      showExamples={false}
    />
    <Field
      field={
        FieldModel {
          "deprecated": false,
          "description": "",
          "example": undefined,
          "expanded": false,
          "in": undefined,
          "name": "type",
          "required": true,
          "schema": SchemaModel {
            "_$ref": "#/components/schemas/Dog/properties/type/schema",
            "activeOneOf": 0,
            "constraints": Array [],
            "default": undefined,
            "deprecated": false,
            "description": "",
            "displayType": "string",
            "enum": Array [],
            "example": undefined,
            "format": undefined,
            "isCircular": undefined,
            "isPrimitive": true,
            "nullable": false,
            "options": RedocNormalizedOptions {
              "expandResponses": Object {},
              "hideHostname": false,
              "nativeScrollbars": false,
              "noAutoAuth": false,
              "pathInMiddlePanel": false,
              "requiredPropsFirst": false,
              "scrollYOffset": [Function],
              "theme": Object {
                "baseFont": Object {
                  "family": "Roboto, sans-serif",
                  "lineHeight": "1.5",
                  "optimizeSpeed": true,
                  "size": "14px",
                  "smoothing": "antialiased",
                  "weight": "300",
                },
                "code": Object {
                  "fontFamily": "Courirer, monospace",
                  "fontSize": "13px",
                },
                "colors": Object {
                  "error": "#e53935",
                  "http": Object {
                    "basic": "#999",
                    "delete": "#e27a7a",
                    "get": "#6bbd5b",
                    "link": "#31bbb6",
                    "options": "#d3ca12",
                    "patch": "#e09d43",
                    "post": "#248fb2",
                    "put": "#9b708b",
                  },
                  "info": "skyblue",
                  "main": "#32329f",
                  "redirect": "orange",
                  "success": "#00aa13",
                  "text": "#263238",
                  "warning": "#f1c400",
                },
                "headingsFont": Object {
                  "family": "Montserrat, sans-serif",
                },
                "links": Object {
                  "color": undefined,
                  "hover": undefined,
                  "visited": undefined,
                },
                "logo": Object {
                  "maxHeight": "120px",
                },
                "menu": Object {
                  "backgroundColor": "#fafafa",
                  "width": "260px",
                },
                "rightPanel": Object {
                  "backgroundColor": "#263238",
                  "width": 40,
                },
                "schemaView": Object {
                  "defaultDetailsWidth": "75%",
                  "linesColor": "#7f99cf",
                },
                "spacingUnit": 20,
              },
              "untrustedSpec": false,
            },
            "pattern": undefined,
            "rawSchema": Object {
              "default": undefined,
              "type": "string",
            },
            "readOnly": false,
            "schema": Object {
              "default": undefined,
              "type": "string",
            },
            "title": "",
            "type": "string",
            "typePrefix": "",
            "writeOnly": false,
          },
        }
      }
      isLast={true}
      key="type"
      renderDiscriminatorSwitch={[Function]}
      showExamples={false}
    />
  </tbody>
</styled.table>
`;
